--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
         os: [ubuntu-latest, windows-latest]
 
     steps:
@@ -44,7 +44,7 @@ jobs:
 
     - name: Run pytest
       run: |
-        pytest --cov=mdformat_plugin --cov-report=xml --cov-report=term-missing
+        pytest --cov=mdformat_simple_breaks --cov-report=xml --cov-report=term-missing
 
     - name: Upload to Codecov
       if: matrix.os == 'ubuntu-latest' && matrix.python-version == 3.7
