--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,15 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 keywords = ["mdformat", "markdown", "markdown-it"]
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 dependencies = [
-    "mdformat >=0.7.0,<0.8.0",
+    "mdformat ~= 1.0.0",
 ]
 dynamic = ["version", "description"]
 
 [project.optional-dependencies]
 test = [
-    "pytest~=6.0",
+    "pytest >= 8.4.0",
     "coverage",
     "pytest-cov",
 ]
